--- a/index.html
+++ b/index.html
@@ -2,27 +2,181 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Accessible Audio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cosmethic Access — Audio Descriptions</title>
   <style>
-    body { font-family: sans-serif; line-height: 1.5; padding: 2rem; max-width: 600px; margin: auto; }
-    audio { width: 100%; margin: 1rem 0; }
-    .transcript { margin-top: 2rem; background: #f7f7f7; padding: 1rem; border-radius: 8px; }
+    :root {
+      --bg: #f5f5f7;
+      --fg: #111114;
+      --card: #ffffff;
+      --muted: #6b7280;
+      --accent: #0f172a;
+      --radius: 14px;
+    }
+    * { box-sizing: border-box; }
+    html:focus-within { scroll-behavior: smooth; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      color: var(--fg);
+      background: var(--bg);
+      line-height: 1.6;
+    }
+    .wrap {
+      min-height: 100svh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 24px;
+    }
+    main {
+      width: 100%;
+      max-width: 820px;
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+      padding: 20px clamp(16px, 3vw, 28px);
+    }
+    header h1 {
+      margin: 0 0 8px 0;
+      font-size: clamp(1.35rem, 3vw, 1.85rem);
+    }
+    p.lead {
+      margin: 0 0 16px 0;
+      color: var(--muted);
+      font-size: clamp(1rem, 2.4vw, 1.0625rem);
+    }
+    nav {
+      margin: 8px 0 16px 0;
+    }
+    nav a {
+      display: inline-block;
+      margin-right: 12px;
+      text-decoration: underline;
+    }
+    .skip-link {
+      position: absolute;
+      top: -40px;
+      left: 16px;
+      padding: 8px 12px;
+      background: #000;
+      color: #fff;
+      border-radius: 8px;
+    }
+    .skip-link:focus {
+      top: 16px;
+      outline: 2px solid #fff;
+      outline-offset: 2px;
+    }
+    section { margin-top: 22px; }
+    h2 { margin: 0 0 6px 0; font-size: clamp(1.1rem, 2.6vw, 1.35rem); }
+    .meta { margin: 2px 0 10px 0; color: var(--muted); font-size: 0.96rem; }
+    audio {
+      width: 100%;
+      display: block;
+      margin: 12px 0 18px 0; /* spacing so buttons never overlap on mobile */
+    }
+    .btn-row {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 8px;
+    }
+    .btn {
+      display: inline-block;
+      width: 100%;
+      text-align: center;
+      padding: 14px 16px;
+      border-radius: 12px;
+      text-decoration: none;
+      font-weight: 600;
+      background: var(--accent);
+      color: #fff;
+      border: 2px solid var(--accent);
+    }
+    .btn.secondary {
+      background: transparent;
+      color: var(--accent);
+    }
+    .transcript-note { margin-top: 8px; color: var(--muted); font-size: 0.95rem; }
+    footer {
+      margin-top: 20px;
+      color: var(--muted);
+      font-size: 0.9rem;
+      text-align: center;
+    }
+    a:focus-visible, button:focus-visible, audio:focus-visible {
+      outline: 3px solid #4f46e5;
+      outline-offset: 3px;
+      border-radius: 8px;
+    }
+    @media (prefers-reduced-motion: reduce) {
+      html:focus-within { scroll-behavior: auto; }
+    }
   </style>
 </head>
 <body>
-  <h1>🎧 Audio Instructions</h1>
-  <p>Press play or download below:</p>
-  
-  <audio controls>
-    <source src="audio.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-  
-  <p><a href="audio.mp3" download>⬇️ Download MP3</a></p>
-  
-  <div class="transcript">
-    <h2>Transcript</h2>
-    <p>Paste your transcript text here for full accessibility.</p>
+  <a class="skip-link" href="#project">Skip to content</a>
+  <div class="wrap">
+    <main role="main" aria-labelledby="title">
+      <header>
+        <h1 id="title">Cosmethic Access — Audio Descriptions</h1>
+        <p class="lead">Three short recordings with downloadable transcripts. Choose a section below.</p>
+        <nav aria-label="Page sections">
+          <a href="#project">About the Project</a>
+          <a href="#specs">Design Specifications</a>
+          <a href="#aboutme">About Me</a>
+        </nav>
+      </header>
+
+      <!-- 1) About the Project -->
+      <section id="project" aria-label="About the Project">
+        <h2>About the Project</h2>
+        <p class="meta">Duration ~2 minutes.</p>
+        <audio controls aria-describedby="project-note">
+          <source src="about-project.mp3" type="audio/mpeg">
+          Your browser does not support the audio element. <a href="about-project.mp3">Download the MP3 instead.</a>
+        </audio>
+        <div class="btn-row">
+          <a class="btn" href="about-project.mp3" download="about-project.mp3" aria-label="Download About the Project MP3">⬇️ Download MP3</a>
+          <a class="btn secondary" href="about-project-transcript.txt" download aria-label="Download About the Project transcript as text file">📝 Download transcript (TXT)</a>
+        </div>
+        <p id="project-note" class="transcript-note">If the player doesn’t work on your device, use the download button. A transcript is also available.</p>
+      </section>
+
+      <!-- 2) Design Specifications -->
+      <section id="specs" aria-label="Design Specifications">
+        <h2>Design Specifications</h2>
+        <p class="meta">Duration ~1.5 minutes.</p>
+        <audio controls aria-describedby="specs-note">
+          <source src="design-specs.mp3" type="audio/mpeg">
+          Your browser does not support the audio element. <a href="design-specs.mp3">Download the MP3 instead.</a>
+        </audio>
+        <div class="btn-row">
+          <a class="btn" href="design-specs.mp3" download="design-specs.mp3" aria-label="Download Design Specifications MP3">⬇️ Download MP3</a>
+          <a class="btn secondary" href="design-specs-transcript.txt" download aria-label="Download Design Specifications transcript as text file">📝 Download transcript (TXT)</a>
+        </div>
+        <p id="specs-note" class="transcript-note">If the player doesn’t work on your device, use the download button. A transcript is also available.</p>
+      </section>
+
+      <!-- 3) About Me -->
+      <section id="aboutme" aria-label="About the Designer">
+        <h2>About Me</h2>
+        <p class="meta">Duration ~1 minute.</p>
+        <audio controls aria-describedby="aboutme-note">
+          <source src="about-me.mp3" type="audio/mpeg">
+          Your browser does not support the audio element. <a href="about-me.mp3">Download the MP3 instead.</a>
+        </audio>
+        <div class="btn-row">
+          <a class="btn" href="about-me.mp3" download="about-me.mp3" aria-label="Download About Me MP3">⬇️ Download MP3</a>
+          <a class="btn secondary" href="about-me-transcript.txt" download aria-label="Download About Me transcript as text file">📝 Download transcript (TXT)</a>
+        </div>
+        <p id="aboutme-note" class="transcript-note">If the player doesn’t work on your device, use the download button. A transcript is also available.</p>
+      </section>
+
+      <footer aria-label="Page information">
+        <p>For assistance in another format or language, please ask a staff member. © Cosmethic Access</p>
+      </footer>
+    </main>
   </div>
 </body>
 </html>
